Fix overflowing hover backgrounds for json inspector

--- a/src/styles/tryWebtask.less
+++ b/src/styles/tryWebtask.less
@@ -3,4 +3,19 @@
 
 .a0-trywebtask {
     .a0-widget();
+    
+    .json-inspector {
+        max-height: 200px;
+
+        overflow-x: hidden;
+        overflow-y: auto;
+    }
+
+    .json-inspector__value {
+        word-wrap: break-word;
+    }
+
+    .json-inspector__line:after {
+        z-index: auto;
+    }
 }
